--- a/app/assets/stylesheets/departments.scss
+++ b/app/assets/stylesheets/departments.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the departments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+a:visited {
+  color: white !important;
+}
+.table {
+  &.departments {
+    .new-department {
+    }
+  }
+}
