--- a/app/views/departments/index.html.haml
+++ b/app/views/departments/index.html.haml
@@ -1,6 +1,6 @@
 %p#notice= notice
 %h1 Departments
-%table
+%table.table.departments
   %thead
     %tr
       %th Name
@@ -15,4 +15,4 @@
         %td= link_to 'Edit', edit_department_path(department)
         %td= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
-= link_to 'New Department', new_department_path
+= link_to 'New Department', new_department_path, class: "btn btn-primary new-department"
