MISC 0.8H - Add employee

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,4 +4,4 @@
       %ul.nav.navbar-nav
         %li{class: "#{controller_name == 'departments' ? 'active' : ''}"}= link_to "Departments", departments_path
 
-        %li{class: "#{controller_name == 'employees' ? 'active' : ''}"}= link_to "Employees", departments_path
+        %li{class: "#{controller_name == 'employees' ? 'active' : ''}"}= link_to "Employees",employees_path
