--- a/app/views/departments/show.html.haml
+++ b/app/views/departments/show.html.haml
@@ -8,3 +8,6 @@
 = link_to 'Edit', edit_department_path(@department)
 |
 = link_to 'Back', departments_path
+
+- @employees = @department.employees
+= render template: "employees/index"
