--- a/app/views/employees/_form.html.haml
+++ b/app/views/employees/_form.html.haml
@@ -11,13 +11,13 @@
     = f.text_field :name, class: "form-control"
   .field
     = f.label :role
-    = f.select :role, options_for_select(Employee.roles.keys), class: "form-control"
+    = f.select :role, options_for_select(Employee.roles.keys), {}, class: "form-control"
   .field
     = f.label :age
     = f.number_field :age, class: "form-control"
   .field
     = f.label :gender
-    = f.select :gender, options_for_select(Employee.genders.keys), class: "form-control"
+    = f.select :gender, options_for_select(Employee.genders.keys), {}, class: "form-control"
   .field
     = f.label :phone
     = f.text_field :phone, class: "form-control"
